--- a/test/fixtures/dishes.yml
+++ b/test/fixtures/dishes.yml
@@ -1,5 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 one:
   item: MyString
   spicy: false
@@ -9,3 +7,8 @@ two:
   item: MyString
   spicy: false
   gf: false
+
+three:
+  item: Yogurt
+  spicy: true
+  gf: true
